# MarketScope

./: .gitignore  CMakeLists.txt  Dockerfile.api  README.md  docker-compose.yml  requirements.txt
bench/: benchmark_order_book.cpp
dashboard/: Dockerfile  index.html  package-lock.json  package.json
dashboard/src/: App.jsx  style.css
docs/: ARCHITECTURE.md  BLUEPRINT.md  DATA_GUIDE.md  INTERVIEW_PREP.md  PROGRESS.md  SNAPSHOT_SCHEMA.md  WEEK_BY_WEEK.md
python/api/: main.py  schemas.py  services.py
python/bookforge_py/: __init__.py  dataset.py  impact.py  labels.py  loaders.py  test_import.py
python/ml/: __init__.py  train.py
src/: ExternalOrderEvent.hpp  HyperliquidCsvReader.cpp  HyperliquidCsvReader.hpp  HyperliquidEngineAdapter.hpp  HyperliquidMatchingEngineAdapter.hpp  HyperliquidMessageReplayer.hpp  IReplayAdapter.hpp  ReplayEngineStub.hpp  feature_export_main.cpp  hyperliquid_replay_main.cpp
src/core/: matching_engine.cpp  matching_engine.hpp  order.hpp  order_book.cpp  order_book.hpp  price_level.cpp  price_level.hpp  trade.hpp
src/features/: FeatureBuilder.cpp  FeatureBuilder.hpp  FeatureCsvWriter.cpp  FeatureCsvWriter.hpp  FeatureRow.hpp  OfiFeatureBuilder.cpp  OfiFeatureBuilder.hpp  RollingFeatureBuilder.cpp  RollingFeatureBuilder.hpp
src/python/: bookforge_py.cpp
src/replay/: ReplayConfig.hpp  ReplayRunner.cpp  ReplayRunner.hpp
src/snapshot/: BookSnapshot.hpp  SnapshotBinaryDeserializer.cpp  SnapshotBinaryDeserializer.hpp  SnapshotBinarySerializer.cpp  SnapshotBinarySerializer.hpp  SnapshotBuilder.cpp  SnapshotBuilder.hpp  SnapshotComparator.cpp  SnapshotComparator.hpp  SnapshotDeserializer.cpp  SnapshotDeserializer.hpp  SnapshotSerializer.cpp  SnapshotSerializer.hpp
tests/cpp/: test_feature_builder.cpp  test_hyperliquid_csv_reader.cpp  test_hyperliquid_matching_engine_adapter.cpp  test_matching_engine.cpp  test_matching_engine_integration.cpp  test_order_book.cpp  test_replay_adapter.cpp  test_replay_regression.cpp  test_replay_runner.cpp  test_snapshot.cpp
tests/fixtures/: hyperliquid_replay_fixture_basic.csv  hyperliquid_replay_fixture_bounded.csv
tests/python/: test_api.py  test_dataset.py  test_loaders.py
tools/: validate_feature_export.py
